# ppflow

./: README.md  pyproject.toml
data/: Walmart_Sales.csv
data/data_fixed/: Walmart_Sales.csv
data1/: data.csv
data111/: test.txt  train.txt
datahandling/: images.py  models.py  scanner.py  splits.py  tabular.py  text.py
datahandling/diagnostics/: base.py  images.py  runner.py  tabular.py
datahandling/ui/: renderer.py
ppflow/: setup.py
ppflow/cli/: main.py
ppflow/ppflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test.py
